# pghstore

./: .gitignore  .travis.yml  Cargo.toml  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
benches/: large_test_data  load.rs  medium_test_data
benchmark/: test_dumps.py  test_loads.py
pghstore/: __init__.py  _native.py  _speedups.c
src/pghstore/: _native.py  _rust_ffi.py  _speedups.c  _speedups_wrapper.py  exceptions.py  version.py
src/pghstorers/: Cargo.toml  lib.rs  load.rs  t.py
src/pghstorers/benches/: dump_hashmap.rs  generate.py  load.rs
src/pghstorers/src/: dump.rs  lib.rs  load.rs
tests/: dumps.py  loads.py  test_dumps.py  test_loads.py
