[package]
name = "pghstorers"
version = "0.1.0"
authors = ["Ian Stapleton Cordasco <graffatcolmingov@gmail.com>"]

[lib]
# Specify a slightly different path so Python and Rust can coexist
path = "src/pghstorers/lib.rs"
# rlib is necessary so we can run benchmarks
crate-type = ["rlib", "dylib"]

[dependencies]
libc = "0.2"
